--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,44 @@
+* {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
+
 html,
 body,
 #root,
 #root > div {
   height: 100%;
+}
+
+#header {
+  height: 64px;
+  border-bottom: 1px solid black;
+}
+
+#header-area {
+  width: 1024px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  /* 자식 양 끝으로 */
+  justify-content: space-between;
+}
+
+#header-area img {
+  width: 128px;
+  height: 36px;
+}
+
+#body {
+  height: 100vh;
+  width: 1024px;
+  margin: 0 auto;
+  padding-bottom: 24px;
+}
+
+#footer {
+  height: 200px;
+  background-color: rgb(230, 230, 230);
 }
